--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-parallax-tilt": "^1.7.293",
+    "react-router-dom": "^7.5.1",
     "react-tsparticles": "^2.12.2",
     "tailwindcss": "^4.1.4"
   },
